<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3D3E1"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-4dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/textViewWallet"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/rectangle"
        android:padding="6dp"
        android:text="@string/cash"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCard"
        app:layout_constraintEnd_toStartOf="@+id/textViewCard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCard" />

    <TextView
        android:id="@+id/textViewCard"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rectangle"
        android:padding="6dp"
        android:text="@string/card"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewWallet"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewBankCard"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:contentDescription="@string/card"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCard"
        app:layout_constraintStart_toStartOf="@+id/textViewCard"
        app:layout_constraintTop_toTopOf="@+id/textViewCard"
        app:srcCompat="@drawable/cardddd" />

    <ImageView
        android:id="@+id/imageViewCash"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/cash"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWallet"
        app:layout_constraintStart_toStartOf="@+id/textViewWallet"
        app:layout_constraintTop_toTopOf="@+id/textViewWallet"
        app:srcCompat="@drawable/moneyyy" />


    <TextView
        android:id="@+id/textViewCashCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#242582"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/textViewWallet"
        app:layout_constraintStart_toStartOf="@+id/textViewWallet"
        app:layout_constraintTop_toBottomOf="@+id/textViewWallet"
        app:layout_constraintVertical_bias="0.461"
        tools:text="2 200 Р" />

    <TextView
        android:id="@+id/textViewCardCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="#242582"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewCard"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/textViewCard"
        app:layout_constraintTop_toBottomOf="@+id/textViewCard"
        tools:text="17 000 Р" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="48dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWallet" />


    <ImageView
        android:id="@+id/imageViewMONEY"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/money_with_wings_svgrepo_com" />


    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/house_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewUslugi"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewShops"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/textViewProducts"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/products_supermarket_svgrepo_com__1_"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCafe"
        app:layout_constraintEnd_toEndOf="@+id/textViewPets"
        app:layout_constraintStart_toStartOf="@+id/textViewPets"
        app:layout_constraintTop_toTopOf="@+id/textViewCafe" />

    <TextView
        android:id="@+id/textViewFun"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/cinema_theater_svgrepo_com"
        app:layout_constraintBottom_toTopOf="@+id/imageViewMONEY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/textViewCafe"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/hamburger_svgrepo_com__1_"
        android:elevation="8dp"
        android:shadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewHome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewHome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUslugi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/man_getting_haircut_medium_skin_tone_svgrepo_com__1_"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRashody"
        app:layout_constraintEnd_toEndOf="@+id/textViewFun"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewFun"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMONEY"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/textViewShops"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shopping_bag_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewMONEY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPets"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/dog_svgrepo_com__1_"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/textViewUslugi"
        app:layout_constraintTop_toBottomOf="@+id/textViewPresent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewPresent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/present_gift_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/imageViewMONEY"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewDescProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/products"
        app:layout_constraintBottom_toTopOf="@+id/textViewProducts"
        app:layout_constraintEnd_toEndOf="@+id/textViewProducts"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/textViewProducts" />

    <TextView
        android:id="@+id/textViewDescFun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fun"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textViewFun"
        app:layout_constraintEnd_toEndOf="@+id/textViewFun"
        app:layout_constraintStart_toStartOf="@+id/textViewFun" />

    <TextView
        android:id="@+id/textViewDescHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Home"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textViewHome"
        app:layout_constraintEnd_toEndOf="@+id/textViewHome"
        app:layout_constraintStart_toStartOf="@+id/textViewHome" />

    <TextView
        android:id="@+id/textViewDescCafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Cafe"
        app:layout_constraintBottom_toTopOf="@+id/textViewCafe"
        app:layout_constraintEnd_toEndOf="@+id/textViewCafe"
        app:layout_constraintStart_toStartOf="@+id/textViewCafe" />

    <TextView
        android:id="@+id/textViewDescUslugi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/uslugi"
        app:layout_constraintBottom_toTopOf="@+id/textViewUslugi"
        app:layout_constraintEnd_toEndOf="@+id/textViewUslugi"
        app:layout_constraintStart_toStartOf="@+id/textViewUslugi" />

    <TextView
        android:id="@+id/textViewDescShops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/shopitems"
        app:layout_constraintBottom_toTopOf="@+id/textViewShops"
        app:layout_constraintEnd_toEndOf="@+id/textViewShops"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewShops" />

    <TextView
        android:id="@+id/textViewDescPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/pets"
        app:layout_constraintBottom_toTopOf="@+id/textViewPets"
        app:layout_constraintEnd_toEndOf="@+id/textViewPets"
        app:layout_constraintStart_toStartOf="@+id/textViewPets" />

    <TextView
        android:id="@+id/textViewDescPresent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/present"
        app:layout_constraintBottom_toTopOf="@+id/textViewPresent"
        app:layout_constraintEnd_toEndOf="@+id/textViewPresent"
        app:layout_constraintStart_toStartOf="@+id/textViewPresent" />

    <TextView
        android:id="@+id/textViewRashody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rashody"
        android:textColor="#242582"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBalance" />


    <TextView
        android:id="@+id/textViewBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textColor="#242582"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMONEY"
        app:layout_constraintVertical_bias="0.62" />

    <View
        android:id="@+id/viewBasement"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/main"
        android:textColor="#242582"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBasement"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/textViewLenta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/lenta"
        android:textColor="#242582"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewMain"
        app:layout_constraintTop_toBottomOf="@+id/viewBasement"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/textViewStat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/stat"
        android:textColor="#242582"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLenta"
        app:layout_constraintTop_toBottomOf="@+id/viewBasement"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/textViewHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="#242582"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewStat"
        app:layout_constraintTop_toBottomOf="@+id/viewBasement"
        app:layout_constraintWidth_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>